--- a/blocks/profile/__button-edit/profile__button-edit.css
+++ b/blocks/profile/__button-edit/profile__button-edit.css
@@ -9,3 +9,12 @@
   padding: 0;
 }
 
+@media screen and (max-width: 540px) {
+  .profile__button-edit {
+    width: 18px;
+    height: 18px;
+    background-image: url(../../../images/Edit_Button18.svg);
+    margin-bottom: 20px;
+  }
+}
+
