--- a/blocks/card/__like/card__like.css
+++ b/blocks/card/__like/card__like.css
@@ -2,5 +2,14 @@
   width: 22px;
   height: 19px;
   background-image: url(../../../images/like.svg);
+  background-color: white;
   margin: 30px 20px 30px 0;
+  padding: 0;
+  border: none;
+  transition: opacity 0.2s;
+}
+
+.card__like:hover {
+  opacity: 0.5;
+  cursor: pointer;
 }
