--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -1,6 +1,7 @@
 .card {
   background-color: #FFFFFF;
   border-radius: 10px;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   list-style-type: none;
