--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,8 +1,18 @@
 .popup__input {
-  font-style: normal;
+  border: 1px solid transparent;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  width: 358px;
+  height: 27px;
+  margin: 0 36px 30px;
+  padding: 0;
   font-weight: normal;
   font-size: 14px;
   line-height: 17px;
-  padding: 0;
 }
 
+@media screen and (max-width: 540px) {
+  .popup__input {
+    width: 238px;
+    margin: 0 22px 30px;
+  }
+}
