--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -4,11 +4,12 @@
   border-radius: 50%;
   grid-area: avatar;
   margin-right: 10px;
+  object-fit: cover;
 }
 
 @media screen and (max-width: 540px) {
   .profile__avatar {
     justify-self: center;
-    margin: 0 0 22.5px;
+    margin: 0 0 22.25px;
   }
 }
