--- a/pages/index.css
+++ b/pages/index.css
@@ -2,7 +2,7 @@
 @import url(../fonts/fonts.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
-@import url(../blocks/body/body.css);
+@import url(../blocks/site/site.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__info/profile__info.css);
@@ -12,6 +12,7 @@
 @import url(../blocks/profile/__button-edit/profile__button-edit.css);
 @import url(../blocks/profile/__button-add/profile__button-add.css);
 @import url(../blocks/gallery/gallery.css);
+@import url(../blocks/gallery__cards/gallery__cards.css);
 @import url(../blocks/card/card.css);
 @import url(../blocks/card/__image/card__image.css);
 @import url(../blocks/card/__description/card__description.css);
@@ -24,10 +25,10 @@
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__container/popup__container.css);
-@import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__button-close/popup__button-close.css);
 @import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__input/popup__input.css);
-@import url(../blocks/popup/__job-input/popup__job-input.css);
-@import url(../blocks/popup/__name-input/popup__name-input.css);
+@import url(../blocks/popup/__input/_content/popup__input_content_name.css);
+@import url(../blocks/popup/__input/_content/popup__input_content_job.css);
 @import url(../blocks/popup/__button-save/popup__button-save.css);
