--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -3,6 +3,7 @@
   height: 33px;
   background-image: url(../../../images/logo.svg);
   background-size: contain;
+  background-repeat: no-repeat;
   margin: 45px 0 41px;
 }
 
