--- a/blocks/popup/__button-close/popup__button-close.css
+++ b/blocks/popup/__button-close/popup__button-close.css
@@ -6,7 +6,7 @@
   background-color: rgba(0, 0, 0, 0);
   border: none;
   padding: 0;
-  margin-left: 478px;
+  align-self: flex-end;
   margin-bottom: 8px;
 }
 
@@ -15,6 +15,5 @@
     width: 20px;
     height: 20px;
     margin-bottom: 16px;
-    margin-left: 262px;
   }
 }
