--- a/blocks/popup-card/popup-card.css
+++ b/blocks/popup-card/popup-card.css
@@ -1,11 +1,11 @@
-.popup {
+.popup-card {
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1;
+  background: rgba(0, 0, 0, 0.9);
   position: fixed;
   left: 0;
   top: 0;
+  z-index: 2;
   display: flex;
   justify-content: center;
   align-items: center;
