--- a/blocks/popup/__button-save/popup__button-save.css
+++ b/blocks/popup/__button-save/popup__button-save.css
@@ -4,7 +4,7 @@
   color: white;
   width: 358px;
   height: 50px;
-  margin: 18px 36px;
+  margin: 18px 36px 36px;
   padding: 0;
   border: none;
   font-weight: normal;
