--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -3,7 +3,7 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   width: 358px;
   height: 27px;
-  margin: 0 36px 30px;
+  margin: 0 36px;
   padding: 0;
   font-weight: normal;
   font-size: 14px;
@@ -13,6 +13,7 @@
 @media screen and (max-width: 540px) {
   .popup__input {
     width: 238px;
-    margin: 0 22px 30px;
+    margin: 0 22px;
   }
 }
+
