--- a/src/blocks/card/__like/card__like.css
+++ b/src/blocks/card/__like/card__like.css
@@ -3,7 +3,7 @@
   height: 19px;
   background-image: url(../../../images/like.svg);
   background-color: white;
-  margin: 30px 20px 30px 0;
+  margin: 0;
   padding: 0;
   border: none;
   transition: opacity 0.2s;
