--- a/src/blocks/popup/__button/_disabled/popup__button_disabled.css
+++ b/src/blocks/popup/__button/_disabled/popup__button_disabled.css
@@ -1,4 +1,4 @@
-.popup__button-save_disabled {
+.popup__button_disabled {
   background-color: white;
   color: #000000;
   border: 1px solid #000000;
