--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -1,4 +1,4 @@
-.popup__button-save {
+.popup__button {
   background-color: black;
   border-radius: 2px;
   color: white;
@@ -14,7 +14,7 @@
   transition: opacity 0.2s;
 }
 
-.popup__button-save:hover {
+.popup__button:hover {
   opacity: 0.8;
   cursor: pointer;
 }
