--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -2,6 +2,7 @@
   width: 127px;
   height: 127px;
   border-radius: 50%;
+  border: none;
   grid-area: avatar;
   margin-right: 10px;
   object-fit: cover;
